--- a/test.html
+++ b/test.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="container">
+        <div id="cabecera"></div>
       <div id="post">
         <h1>Esto es un curso de introducción a Git</h1>
         <p>
