--- a/test.html
+++ b/test.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <div id="container">
-        <div id="cabecera"></div>
+        <div id="cabecera">
+          Hyperblog
+          <span id="tagline">Tu blog de confianza</span>
+        </div>
       <div id="post">
         <h1>Esto es un curso de introducción a Git</h1>
         <p>
