Agregado contenido adicional del blog

--- a/test.html
+++ b/test.html
@@ -15,6 +15,7 @@
           El objetivo del curso es aprender a usar git donde utilizaremos las
           ramas de git y aprenderemos un poco acerca de su uso
         </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis provident adipisci tempora earum, a repellat nihil quidem ipsa dolorem aut minus doloremque alias officiis itaque ipsum iste dolore tenetur neque.</p>
       </div>
     </div>
   </body>
