--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
           Hyperblog
-          <span id="tagline">Tu blog de confianza</span>
+          <span id="tagline">Tu blog de maestro</span>
         </div>
       <div id="post">
         <h1>Esto es un curso de introducción a Git</h1>
@@ -20,6 +20,7 @@
           ramas de git y aprenderemos un poco acerca de su uso
         </p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis provident adipisci tempora earum, a repellat nihil quidem ipsa dolorem aut minus doloremque alias officiis itaque ipsum iste dolore tenetur neque.</p>
+        <p>Suscribite y dale like</p>
       </div>
     </div>
   </body>
